--- a/news/news_presentation/src/main/res/layout/activity_news.xml
+++ b/news/news_presentation/src/main/res/layout/activity_news.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.lenibonje.news_presentation.NewsActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="News Activity"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
