Add AcitivtyNews UI

--- a/news/news_presentation/src/main/res/layout/activity_news.xml
+++ b/news/news_presentation/src/main/res/layout/activity_news.xml
@@ -6,13 +6,24 @@
     android:layout_height="match_parent"
     tools:context="com.lenibonje.news_presentation.NewsActivity">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:text="News Activity"
+        android:textSize="24dp"
+        android:textColor="@android:color/black"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
