--- a/news/news_presentation/src/main/res/layout/activity_news.xml
+++ b/news/news_presentation/src/main/res/layout/activity_news.xml
@@ -18,6 +18,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_news"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,5 +26,14 @@
 
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
+    
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress_bar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
